# demobazel

./: .gitignore  BUILD.bazel  README.md  WORKSPACE.bazel  bazel-demobazel  maven_install.json
src/main/java/com/kelsonthony/demobazel/: DemobazelApplication.java
src/main/java/com/kelsonthony/demobazel/api/controller/: UserController.java
src/main/java/com/kelsonthony/demobazel/controller/: UserController.java
src/main/java/com/kelsonthony/demobazel/domain/: User.java
src/main/java/com/kelsonthony/demobazel/domain/model/: User.java
src/main/java/com/kelsonthony/demobazel/domain/repository/: UserRepository.java
src/main/java/com/kelsonthony/demobazel/repository/: UserRepository.java
src/main/java/com/kelsonthony/demobazel/service/: UserService.java
src/main/resources/: application.properties
src/test/java/com/kelsonthony/demobazel/: DemobazelApplicationTests.java
