java_library(
    name = "lib",
    srcs = glob(["src/main/java/com/kelsonthony/**/*.java", "src/main/java/com/kelsonthony/demobazel/**/**/*.java"]),
    resources = glob(["src/main/resources/**/*","src/main/resources/**"]),
    visibility = ["//src/test:__subpackages__"],
    deps = [
         "@maven//:org_springframework_boot_spring_boot",
         "@maven//:org_springframework_boot_spring_boot_autoconfigure",
         "@maven//:org_springframework_boot_spring_boot_starter_web",
         "@maven//:org_springframework_spring_context",
         "@maven//:org_springframework_spring_web",
         "@maven//:org_springframework_spring_beans",
         "@maven//:jakarta_annotation_jakarta_annotation_api",
         "@maven//:jakarta_persistence_jakarta_persistence_api",
         "@maven//:org_springframework_data_spring_data_jpa",
         "@maven//:com_h2database_h2",
    ],
)

java_binary(
    name = "app",
    main_class = "com.kelsonthony.demobazel.DemobazelApplication",
    runtime_deps = [
        ":lib",
    ],
)