workspace(
    # How this workspace would be referenced with absolute labels from another workspace
    name = "demobazel",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_JVM_EXTERNAL_TAG = "4.5"
RULES_JVM_EXTERNAL_SHA = "b17d7388feb9bfa7f2fa09031b32707df529f26c91ab9e5d909eb1676badd9a6"

http_archive(
    name = "rules_jvm_external",
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    sha256 = RULES_JVM_EXTERNAL_SHA,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:repositories.bzl", "rules_jvm_external_deps")

rules_jvm_external_deps()

load("@rules_jvm_external//:setup.bzl", "rules_jvm_external_setup")

rules_jvm_external_setup()

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        #"org.apache.logging.log4j:log4j-api:2.22.1",
        #"org.apache.logging.log4j:log4j-to-slf4j:2.22.1",
        "org.hamcrest:hamcrest-library:1.3",
        "org.springframework.boot:spring-boot-autoconfigure:2.7.17",
        "org.springframework.boot:spring-boot-test-autoconfigure:2.7.17",
        "org.springframework.boot:spring-boot-test:2.7.17",
        "org.springframework.boot:spring-boot:2.7.17",
        "org.springframework.boot:spring-boot-starter-web:2.7.17",
        "org.springframework:spring-beans:5.3.27",
        "org.springframework:spring-context:5.3.27",
        "org.springframework:spring-test:5.3.27",
        "org.springframework:spring-web:5.3.27",
        # new artifacts
        "org.springframework.boot:spring-boot-starter-data-jpa:2.7.17",
        #"org.springframework.data:spring-data-commons:2.7.17",
        #"org.springframework.data:spring-data-jpa:2.7.17",
        #"jakarta.annotation:jakarta.annotation-api:3.0.0-M1",
        #"jakarta.persistence:jakarta.persistence-api:3.1.0",
        "com.h2database:h2:2.2.224",
#        "net.devh:grpc-server-spring-boot-starter:2.15.0.RELEASE",
#        "io.grpc:grpc-core:1.61.0",
#        "io.grpc:grpc-stub:1.58.0",
#        "io.grpc:grpc-protobuf:1.58.0",

    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    maven_install_json = "//:maven_install.json",
)

load("@maven//:defs.bzl", "pinned_maven_install")
pinned_maven_install()