workspace(
    name = "demobazel",
)

load("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

RULES_JVM_EXTERNAL_TAG = "4.5"
RULES_JVM_EXTERNAL_SHA = "b17d7388feb9bfa7f2fa09031b32707df529f26c91ab9e5d909eb1676badd9a6"

http_archive(
    name = "rules_jvm_external",
    strip_prefix = "rules_jvm_external-%s" % RULES_JVM_EXTERNAL_TAG,
    sha256 = RULES_JVM_EXTERNAL_SHA,
    url = "https://github.com/bazelbuild/rules_jvm_external/archive/%s.zip" % RULES_JVM_EXTERNAL_TAG,
)

load("@rules_jvm_external//:repositories.bzl", "rules_jvm_external_deps")

rules_jvm_external_deps()

load("@rules_jvm_external//:setup.bzl", "rules_jvm_external_setup")

rules_jvm_external_setup()

load("@rules_jvm_external//:defs.bzl", "maven_install")

maven_install(
    artifacts = [
        "org.slf4j:slf4j-nop:2.0.7",
        "org.hamcrest:hamcrest-library:1.3",
        "org.springframework.boot:spring-boot-autoconfigure:2.7.17",
        "org.springframework.boot:spring-boot-test-autoconfigure:2.7.17",
        "org.springframework.boot:spring-boot-test:2.7.17",
        "org.springframework.boot:spring-boot:2.7.17",
        "org.springframework.boot:spring-boot-starter-web:2.7.17",
        "org.springframework:spring-beans:5.3.30",
        "org.springframework:spring-context:5.3.30",
        "org.springframework:spring-test:5.3.30",
        "org.springframework:spring-web:5.3.30",
        "org.springframework.boot:spring-boot-starter-data-jpa:2.7.17",
        "jakarta.annotation:jakarta.annotation-api:1.3.5",
        "jakarta.xml.bind:jakarta.xml.bind-api:2.3.2",
        "org.glassfish.jaxb:jaxb-runtime:2.3.2",
        "com.h2database:h2:2.2.224",
    ],
    repositories = [
        "https://maven.google.com",
        "https://repo1.maven.org/maven2",
    ],
    maven_install_json = "//:maven_install.json",

)

load("@maven//:defs.bzl", "pinned_maven_install")
pinned_maven_install()